<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WTFIIMC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Get started right away:</string>
    <string name="add_person">Add yourself:</string>
    <string name="event_info">Event Information:</string>
    <string name="prompt_seats_open">Seats open</string>
    <string name="can_drive">Can drive? </string>
    <string name="ride_info">Rides:</string>
    <string name="list_of_events">Recently added events:</string>
    <string name="prompt_event_name">Event name</string>
    <string name="prompt_owner_name">Your name</string>
    <string name="prompt_location">Pick-up location</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_start_date">Start date</string>
    <string name="date_to"> to </string>
    <string name="date_from">from </string>
    <string name="prompt_event_desc">Description of event</string>
    <string name="prompt_end_date">End date</string>
    <string name="button_send">Submit</string>
    <string name="button_all_events">See All</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_list_events">All Events</string>
    <string name="title_main_activity">Who the FOX is in My Car?</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="button_send_rides">Send out ride assignments!</string>
    <string name="pick_date">Pick Date</string>

</resources>
