<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
			    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1" >
    <TableRow>
        
        <FrameLayout 
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1">
	    <ScrollView android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:background="#efefef">
            <LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:paddingBottom="@dimen/activity_vertical_margin"
			    android:paddingLeft="@dimen/activity_horizontal_margin"
			    android:paddingRight="@dimen/activity_horizontal_margin"
			    android:paddingTop="@dimen/activity_vertical_margin"
			    android:orientation="vertical"
			    tools:context=".MainActivity" >
			
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/add_person" />
				<LinearLayout 
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:orientation="horizontal">
				<TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/prompt_owner_name" />
				
				<EditText android:id="@+id/person_name"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			         />
				</LinearLayout>
				<LinearLayout 
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:orientation="horizontal">
				<TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/prompt_email" />
				<EditText android:id="@+id/person_email"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			         />
				</LinearLayout>
				<LinearLayout 
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:orientation="horizontal">
				<TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/prompt_phone" />
				<EditText android:id="@+id/person_phone"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			         />
				</LinearLayout>
				<LinearLayout 
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:orientation="horizontal">
				<TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/prompt_location" />
				<EditText android:id="@+id/person_location"
				    android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			         />
				</LinearLayout>
				<CheckBox android:id="@+id/check_can_drive"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/can_drive"
		        android:onClick="onCheckboxClicked"/>
				<EditText android:id="@+id/num_seats_open"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:hint="@string/prompt_seats_open" />
				<LinearLayout 
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:orientation="horizontal">
				<EditText android:id="@+id/start_date"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:hint="@string/prompt_start_date" />
				<TextView
				    android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
				    android:hint="@string/date_to"/>
				<EditText android:id="@+id/end_date"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:hint="@string/prompt_end_date" />
				</LinearLayout>
				<Button android:id="@+id/submit_person_button"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/button_send" />
				<TextView android:id="@+id/results"
				    android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
				    />
			</LinearLayout>
		</ScrollView>
		</FrameLayout>
		
		<FrameLayout 
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1">
	    <ScrollView android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	>
	    	<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:paddingBottom="@dimen/activity_vertical_margin"
			    android:paddingLeft="@dimen/activity_horizontal_margin"
			    android:paddingRight="@dimen/activity_horizontal_margin"
			    android:paddingTop="@dimen/activity_vertical_margin"
			    android:orientation="vertical"
			    tools:context=".MainActivity" >
            
		    	<TextView
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/event_info" />
		    	<TextView android:id="@+id/event_info_results"
				    android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
				    /><TextView
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/ride_info" />
		    	<TextView android:id="@+id/ride_info_results"
				    android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
				    />
		    	
		    </LinearLayout>
		    </ScrollView>
	    </FrameLayout>
	        
    </TableRow>
	
</TableLayout>
