<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1" 
    android:background="#FFEEAA">

    <TableRow>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                 >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    tools:context=".MainActivity" >

                    <TextView android:id="@+id/add_event_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hello_world" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" 
                        
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextStyle"
                            android:text="@string/prompt_event_name" />

                        <EditText
                            android:id="@+id/event_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextStyle"
                            android:text="@string/prompt_owner_name" />

                        <EditText
                            android:id="@+id/owner_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextStyle"
                            android:text="@string/prompt_event_desc" />

                        <EditText
                            android:id="@+id/event_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextStyle"
                            android:text="@string/date_from" />

                        <EditText
                            android:id="@+id/start_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_start_date" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextStyle"
                            android:text="@string/date_to" />

                        <EditText
                            android:id="@+id/end_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_end_date" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/submit_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ButtonStyle"
                        android:text="@string/button_send" />

                    <TextView
                        android:id="@+id/results"
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </ScrollView>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    tools:context=".MainActivity" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TitleStyle"
                        android:text="@string/list_of_events" />

                    <TextView
                        android:id="@+id/current_events"
                        android:layout_width="wrap_content"
                        style="@style/TextStyle"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/all_events"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="listEvents"
                        style="@style/ButtonStyle"
                        android:text="@string/button_all_events" />
                </LinearLayout>
            </ScrollView>
        </FrameLayout>
    </TableRow>

</TableLayout>